# acoustic_localization

./: CMakeLists.txt  package.xml
bag_files/: Korrektur_RTK_Idee.py  acoustic_distances_vs_ground_truth.py  calculate_sos.py  check_rtk_fix.py  ekf_test.py  listen_logs.py  main.py  prr_boje_2.py  prr_reihum.py  reader.py  state_estimator_tests.py  two_modems_dynamic_check.py
bag_files/algorithm_verification_messbecher/: metadata.yaml
bag_files/init_sos_test/: init_sos_test_0.mcap  metadata.yaml
bag_files/init_sos_vorläufig/: metadata.yaml
bag_files/listen/: buoy_2_listen_181227.json  buoy_3_listen__20240704_181218.json  buoy_5_listen__20240704_181230.json
bag_files/reihum_modem_test_mit_state_estimator_vergleich_mit_chris_logs/: metadata.yaml
bag_files/setup_rtks_rovnochschief/: metadata.yaml
bag_files/tests/: metadata.yaml  tests_0.mcap
bag_files/two_modems_dynamic/: metadata.yaml
bag_files/two_modems_dynamic_v2/: metadata.yaml
bag_files/two_modems_dynamic_v3/: metadata.yaml
config/: control_params.yaml
launch/: acoustic_adapter.launch.py  acoustic_localization.launch.py  acoustic_localization_sim.launch.py  acoustic_localization_sim_pp.launch.py  control.launch.py  ekf_test.launch.py  init_sos.launch.py  measurement_start_timer.launch.py  mqtt_ros_adapter.launch.py
nodes/: acoustic_adapter.py  control.py  ekf_test.py  euler_angles.py  init_sos.py  interface_ahoi.py  measurement_start_timer.py  mqtt_ros_adapter.py  pp_rov_rtk_correction.py  state_estimator.py  state_estimator_pp.py  state_estimator_test.py
(+1 files in other folders)
